--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: 
       - self-hosted
       - EC2
-      - Oliver-branch  # ⬅️ MISMA ETIQUETA que tu ejemplo funcional
+      - instance-1  # ⬅️ MISMA ETIQUETA que tu ejemplo funcional
     
     steps:
     - name: Verify EC2 instance
@@ -69,22 +69,18 @@ jobs:
         if [ -d "test" ]; then
           echo "💾 Respaldando directorio /test..."
           cp -r test /tmp/test_backup_oliver 2>/dev/null || true
-          echo "✅ Test backup creado"
         fi
         
-        # ACTUALIZAR CÓDIGO (CORREGIDO)
+        # ACTUALIZAR CÓDIGO (COMO TU EJEMPLO)
         if [ -d .git ]; then
           echo "📦 Actualizando código de main..."
           git fetch origin main
           git checkout main
           git reset --hard origin/main
-          echo "✅ Código actualizado"
         else
           echo "📥 Clonando repositorio..."
-          cd "${BASE_DIR}"
+          cd /opt/location-tracker
           git clone -b main https://github.com/Diseno2025-30/Geolocation.git .
-          cd "${MAIN_DIR}"
-          echo "✅ Repositorio clonado"
         fi
         
         cd "${MAIN_DIR}"
@@ -100,17 +96,16 @@ jobs:
         # CONFIGURAR .env
         if [ -f "/tmp/main_env_file" ]; then
           cp "/tmp/main_env_file" .env
-          echo "✅ Archivo .env configurado"
         fi
         
-        # CONFIGURAR APLICACIÓN
+        # CONFIGURAR APLICACIÓN (SIMILAR A TU EJEMPLO)
         APP_NAME="flask-app-${NAME_LOWER}"
-        echo "🔧 Configurando aplicación: ${APP_NAME}"
+        
+        echo "🔧 Configurando aplicación..."
         
         # Configurar Python environment
         if [ ! -d "venv" ]; then
           python3 -m venv venv
-          echo "✅ Entorno virtual creado"
         fi
         
         source venv/bin/activate
@@ -120,17 +115,14 @@ jobs:
         if [ -f requirements.txt ]; then
           pip install -r requirements.txt
         fi
-        echo "✅ Dependencias instaladas"
         
-        # Configurar PM2 (MEJORADO)
+        # Configurar PM2 (COMO TU EJEMPLO)
         pm2 stop ${APP_NAME} 2>/dev/null || true
         pm2 delete ${APP_NAME} 2>/dev/null || true
-        sudo fuser -k 5000/tcp 2>/dev/null || true
-        sleep 2
         
         cat > start_app.sh << 'EOF'
         #!/bin/bash
-        cd "$(dirname "$0")"
+        cd "$(dirname "${BASH_SOURCE[0]}")"
         source venv/bin/activate
         export FLASK_APP=udp_flask_server.py
         export FLASK_ENV=production
@@ -141,18 +133,6 @@ jobs:
         
         pm2 start start_app.sh --name ${APP_NAME} --interpreter bash
         pm2 save
-        echo "✅ PM2 configurado"
-        
-        # VERIFICAR DESPLIEGUE
-        echo "⏳ Esperando inicio de la aplicación..."
-        sleep 5
-        
-        if curl -s -f http://localhost:5000/health > /dev/null 2>&1; then
-          echo "✅ Aplicación respondiendo correctamente"
-        else
-          echo "⚠ La aplicación no responde, revisando logs..."
-          pm2 logs ${APP_NAME} --lines 10 --nostream
-        fi
         
         echo "✅ Despliegue completado para Oliver"
         echo "🔗 URL: https://${FULL_DOMAIN}"
@@ -165,7 +145,7 @@ jobs:
     runs-on: 
       - self-hosted
       - EC2
-      - Hernando-branch  # ⬅️ ETIQUETA CORRECTA
+      - instance-2  # ⬅️ ETIQUETA CORRECTA
     
     steps:
     - name: Verify EC2 instance
@@ -214,22 +194,18 @@ jobs:
         if [ -d "test" ]; then
           echo "💾 Respaldando directorio /test..."
           cp -r test /tmp/test_backup_hernando 2>/dev/null || true
-          echo "✅ Test backup creado"
         fi
         
-        # Actualizar código (CORREGIDO)
+        # Actualizar código
         if [ -d .git ]; then
           echo "📦 Actualizando código de main..."
           git fetch origin main
           git checkout main
           git reset --hard origin/main
-          echo "✅ Código actualizado"
         else
           echo "📥 Clonando repositorio..."
-          cd "${BASE_DIR}"
+          cd /opt/location-tracker
           git clone -b main https://github.com/Diseno2025-30/Geolocation.git .
-          cd "${MAIN_DIR}"
-          echo "✅ Repositorio clonado"
         fi
         
         cd "${MAIN_DIR}"
@@ -242,18 +218,15 @@ jobs:
           echo "✅ Directorio /test preservado"
         fi
         
-        # Configurar aplicación (MEJORADO)
+        # Configurar aplicación
         if [ -f "/tmp/main_env_file" ]; then
           cp "/tmp/main_env_file" .env
-          echo "✅ Archivo .env configurado"
         fi
         
         APP_NAME="flask-app-${NAME_LOWER}"
-        echo "🔧 Configurando aplicación: ${APP_NAME}"
         
         if [ ! -d "venv" ]; then
           python3 -m venv venv
-          echo "✅ Entorno virtual creado"
         fi
         source venv/bin/activate
         pip install --upgrade pip
@@ -262,16 +235,13 @@ jobs:
         if [ -f requirements.txt ]; then
           pip install -r requirements.txt
         fi
-        echo "✅ Dependencias instaladas"
         
         pm2 stop ${APP_NAME} 2>/dev/null || true
         pm2 delete ${APP_NAME} 2>/dev/null || true
-        sudo fuser -k 5000/tcp 2>/dev/null || true
-        sleep 2
         
         cat > start_app.sh << 'EOF'
         #!/bin/bash
-        cd "$(dirname "$0")"
+        cd "$(dirname "${BASH_SOURCE[0]}")"
         source venv/bin/activate
         export FLASK_APP=udp_flask_server.py
         export FLASK_ENV=production
@@ -282,18 +252,6 @@ jobs:
         
         pm2 start start_app.sh --name ${APP_NAME} --interpreter bash
         pm2 save
-        echo "✅ PM2 configurado"
-        
-        # VERIFICAR DESPLIEGUE
-        echo "⏳ Esperando inicio de la aplicación..."
-        sleep 5
-        
-        if curl -s -f http://localhost:5000/health > /dev/null 2>&1; then
-          echo "✅ Aplicación respondiendo correctamente"
-        else
-          echo "⚠ La aplicación no responde, revisando logs..."
-          pm2 logs ${APP_NAME} --lines 10 --nostream
-        fi
         
         echo "✅ Despliegue completado para Hernando"
         echo "🔗 URL: https://${FULL_DOMAIN}"
@@ -306,7 +264,7 @@ jobs:
     runs-on: 
       - self-hosted
       - EC2
-      - Alan-branch  # ⬅️ ETIQUETA CORRECTA
+      - instance-3  # ⬅️ ETIQUETA CORRECTA
     
     steps:
     - name: Verify EC2 instance
@@ -354,22 +312,18 @@ jobs:
         if [ -d "test" ]; then
           echo "💾 Respaldando directorio /test..."
           cp -r test /tmp/test_backup_alan 2>/dev/null || true
-          echo "✅ Test backup creado"
         fi
         
-        # Actualizar código (CORREGIDO)
+        # Actualizar código
         if [ -d .git ]; then
           echo "📦 Actualizando código de main..."
           git fetch origin main
           git checkout main
           git reset --hard origin/main
-          echo "✅ Código actualizado"
         else
           echo "📥 Clonando repositorio..."
-          cd "${BASE_DIR}"
+          cd /opt/location-tracker
           git clone -b main https://github.com/Diseno2025-30/Geolocation.git .
-          cd "${MAIN_DIR}"
-          echo "✅ Repositorio clonado"
         fi
         
         cd "${MAIN_DIR}"
@@ -428,7 +382,7 @@ jobs:
     runs-on: 
       - self-hosted
       - EC2
-      - Sebastian-branch  # ⬅️ ETIQUETA CORRECTA
+      - instance-4  # ⬅️ ETIQUETA CORRECTA
     
     steps:
     - name: Verify EC2 instance
