--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -225,11 +225,13 @@ jobs:
           git reset --hard origin/main
           echo "✅ Código actualizado"
         else
-          echo "📥 Clonando repositorio..."
-          cd "${BASE_DIR}"
-          git clone -b main https://github.com/Diseno2025-30/Geolocation.git .
-          cd "${MAIN_DIR}"
-          echo "✅ Repositorio clonado"
+          echo "📥 Inicializando repositorio..."
+          # Si no existe .git, inicializar el repositorio
+          git init
+          git remote add origin https://github.com/Diseno2025-30/Geolocation.git
+          git fetch origin main
+          git checkout -b main origin/main
+          echo "✅ Repositorio inicializado"
         fi
         
         cd "${MAIN_DIR}"
@@ -365,11 +367,13 @@ jobs:
           git reset --hard origin/main
           echo "✅ Código actualizado"
         else
-          echo "📥 Clonando repositorio..."
-          cd "${BASE_DIR}"
-          git clone -b main https://github.com/Diseno2025-30/Geolocation.git .
-          cd "${MAIN_DIR}"
-          echo "✅ Repositorio clonado"
+          echo "📥 Inicializando repositorio..."
+          # Si no existe .git, inicializar el repositorio
+          git init
+          git remote add origin https://github.com/Diseno2025-30/Geolocation.git
+          git fetch origin main
+          git checkout -b main origin/main
+          echo "✅ Repositorio inicializado"
         fi
         
         cd "${MAIN_DIR}"
