--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -402,45 +402,20 @@ jobs:
         fi
 
         # Gestionar la aplicación PM2
-        echo "🚀 Gestionando aplicación con PM2..."
+        PM2_APP_EXISTS=$(pm2 list --json | jq -r '.[] | select(.name == "'${APP_NAME}'") | .name' || echo "")
 
-        if pm2 list | grep -q "${APP_NAME}"; then
-        if [ "$CODE_UPDATED" = "true" ]; then
-          echo "🔄 Código actualizado, recargando aplicación ${APP_NAME}..."
-          # Verificar que la app realmente existe y está corriendo
-          if pm2 show ${APP_NAME} > /dev/null 2>&1; then
-            pm2 reload ${APP_NAME} --update-env
-            echo "✅ Aplicación recargada con los nuevos cambios"
-          else
-            echo "⚠️ La aplicación ${APP_NAME} no se pudo recargar, reiniciando..."
-            pm2 delete ${APP_NAME} 2>/dev/null || true
-            pm2 start start_app.sh \
-              --name ${APP_NAME} \
-              --interpreter bash \
-              --cwd $PROJECT_PATH \
-              --log-date-format "YYYY-MM-DD HH:mm:ss" \
-              --max-restarts 3 \
-              --restart-delay 3000
+        if [ ! -z "$PM2_APP_EXISTS" ]; then
+          if [ "$CODE_UPDATED" = "true" ]; then
+            echo "🔄 Código actualizado, recargando aplicación ${APP_NAME}..."
+            pm2 reload ${APP_NAME} --update-env || {
+              echo "⚠️ Reload falló, reiniciando aplicación..."
+              pm2 delete ${APP_NAME}
+              pm2 start start_app.sh --name ${APP_NAME} --interpreter bash --cwd $PROJECT_PATH
+            }
           fi
-        else
-          echo "ℹ️ No hay cambios de código, verificando estado de ${APP_NAME}..."
-          pm2 status ${APP_NAME}
-          
-          # Si la app está detenida o con error, reiniciarla
-          if pm2 list | grep "${APP_NAME}" | grep -E "(stopped|errored)"; then
-            echo "⚠️ Aplicación detenida o con error, reiniciando..."
-            pm2 restart ${APP_NAME}
-          fi
-        fi
         else
           echo "🆕 Iniciando nueva aplicación ${APP_NAME}..."
-          pm2 start start_app.sh \
-            --name ${APP_NAME} \
-            --interpreter bash \
-            --cwd $PROJECT_PATH \
-            --log-date-format "YYYY-MM-DD HH:mm:ss" \
-            --max-restarts 3 \
-            --restart-delay 3000
+          pm2 start start_app.sh --name ${APP_NAME} --interpreter bash --cwd $PROJECT_PATH
         fi
 
         # Guardar configuración de PM2
